@@ -3,9 +3,11 @@ High priority:
     - FIX: time machine find way to abtivate/deactuvate
     - FIX: add outputs to Chem. Furnace. and fix
     - XMl recipes? improve
-    - Filtering slots for input
-    - ADD: electrolyzer
-    - ADD: transferrer
+    - Filtering slots for input, make inputs go in the correct place when shift clicked
+    - ADD: recipes for electrolyzer
+    - ADD: recipes for centrifuces
+    - ADD: way do disable/enable energy/storage at runtime
+    - FIX: textures for machines
 
 Soon:
     - Unify energy, wrapper around forge energy with tesla, possibly cofh?
